--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ pagingRuntimeKtx = "3.3.2"
 junitKtx = "1.2.1"
 fragmentTesting = "1.8.4"
 pagingCommon = "3.3.2"
+room = "2.5.2"
 ksp = "1.9.0-1.0.13"
 
 [libraries]
