--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
             android:name=".AddBudgetItemActivity"
             android:exported="false" />
         <activity
+            android:name=".GroupActivity"
+            android:exported="true" />
+        <activity
             android:name=".BudgetActivity"
             android:exported="true">
 
